--- a/CMSAK4/data/CMSAK4_ParT.yaml
+++ b/CMSAK4/data/CMSAK4_ParT.yaml
@@ -10,7 +10,11 @@ selection:
 test_time_selection:
    # (np.abs(jet_eta)<4.7) & (jet_pt>15) & (jet_pt<1000) & (event_no%7==0)
    # (np.abs(jet_eta)<4.7) & (jet_pt>15) & (jet_pt<1000)
-   (np.abs(jet_eta)<4.7) & (jet_corr_pt>10) & (jet_corr_pt<1000)
+   >-
+  (np.abs(jet_eta)<4.7) & (jet_pt>15) & (jet_pt<1000) & (event_no%7!=0)
+  & ( (jet_hadronFlavour>0) | ((jet_hadronFlavour==0) & (np.abs(jet_partonFlavour)!=4) & (np.abs(jet_partonFlavour)!=5)) )
+  & ( ~((jet_genjet_pt>0) & (jet_hadronFlavour==0) & (jet_partonFlavour==0)) | ((jet_genjet_pt>0) & (jet_hadronFlavour==0) & (jet_partonFlavour==0) & (jet_pt<186)) )
+  & ( (jet_genjet_pt>0) | ((jet_genjet_pt<=0) & (jet_pt<61)) )
 
 new_variables:
    ### [format] name: formula
@@ -44,19 +48,19 @@ preprocess:
   ### method: [manual, auto] - whether to use manually specified parameters for variable standardization
   method: manual
   ### data_fraction: fraction of events to use when calculating the mean/scale for the standardization
-  data_fraction: 
+  data_fraction:
 
 inputs:
    pf_features:
       length: 50
       pad_mode: wrap
-      vars: 
+      vars:
       ### [format 1]: var_name (no transformation)
-      ### [format 2]: [var_name, 
-      ###              subtract_by(optional, default=None, no transf. if preprocess.method=manual, auto transf. if preprocess.method=auto), 
-      ###              multiply_by(optional, default=1), 
-      ###              clip_min(optional, default=-5), 
-      ###              clip_max(optional, default=5), 
+      ### [format 2]: [var_name,
+      ###              subtract_by(optional, default=None, no transf. if preprocess.method=manual, auto transf. if preprocess.method=auto),
+      ###              multiply_by(optional, default=1),
+      ###              clip_min(optional, default=-5),
+      ###              clip_max(optional, default=5),
       ###              pad_value(optional, default=0)]
          - [pfcand_pt_log_nopuppi, 0.8, 0.7]
          - [pfcand_e_log_nopuppi, 1.2, 0.6]
@@ -89,7 +93,7 @@ inputs:
    pf_mask:
       length: 50
       pad_mode: constant
-      vars: 
+      vars:
          - [pfcand_mask, null]
    sv_features:
       length: 5
@@ -127,8 +131,8 @@ labels:
    value: [label_b, label_bb, label_c, label_cc, label_uds, label_g, label_undef, label_pu]
    ### [option 2] otherwise use `custom` to define the label, then `value` is a map
    # type: custom
-   # value: 
-      # target_mass: np.where(fj_isQCD, fj_genjet_sdmass, fj_gen_mass) 
+   # value:
+      # target_mass: np.where(fj_isQCD, fj_genjet_sdmass, fj_gen_mass)
 
 observers:
    - event_no
