--- a/performance/roc_config.yaml
+++ b/performance/roc_config.yaml
@@ -15,12 +15,15 @@ ROC_TYPE_DICT:
         PAIR_SameVtx: [[0], null, pair_bin]
     primary_labels:
         #0=b, 1=bb, 4=uds, 5=g
-        JET_bVSuds: [[0,1], [4], primary]
-        JET_bVSg: [[0,1], [5], primary]
+        #JET_bVSuds: [[0,1], [4], primary]
+        #JET_bVSg: [[0,1], [5], primary]
         JET_bVSudsg: [[0,1], [4,5], primary]
-        JET_DeepFlavour_bVSuds: [[0,1], [4], primary]
-        JET_DeepFlavour_bVSg: [[0,1], [5], primary]
-        JET_DeepFlavour_bVSudsg: [[0,1], [4,5], primary]
+        #JET_DeepFlavour_bVSuds: [[0,1,2], [4], primary]
+        #JET_DeepFlavour_bVSg: [[0,1,2], [5], primary]
+        JET_DeepFlavour_bVSudsg: [[0,1,2], [4,5], primary]
+        #JET_CMSSWPN_bVSuds: [[0,1], [4], primary]
+        #JET_CMSSWPN_bVSg: [[0,1], [5], primary]
+        JET_CMSSWPN_bVSudsg: [[0,1], [4,5], primary]
 
 
 # dictionary with the extra features for the ROC curves
@@ -29,9 +32,12 @@ PF_EXTRA_FTS:
     PF_b+bcVSc+other: [pf_mask_charged]
     PF_VtxPos: [pf_mask_from_b]
     #PF_VtxPos : [y_score_pf_clas]
-    JET_DeepFlavour_bVSuds: [null, y_deep_score_primary]
-    JET_DeepFlavour_bVSg: [null, y_deep_score_primary]
+    #JET_DeepFlavour_bVSuds: [null, y_deep_score_primary]
+    #JET_DeepFlavour_bVSg: [null, y_deep_score_primary]
     JET_DeepFlavour_bVSudsg: [null, y_deep_score_primary]
+    #JET_CMSSWPN_bVSuds: [null, y_pn_score_primary]
+    #JET_CMSSWPN_bVSg: [null, y_pn_score_primary]
+    JET_CMSSWPN_bVSudsg: [null, y_pn_score_primary]
 
 
 # dictionary with the axes inf
