--- a/performance/roc_config.yaml
+++ b/performance/roc_config.yaml
@@ -9,27 +9,32 @@
 ROC_TYPE_DICT:
     aux_labels:
         #0=b, 1=c, 2=bc, 3=other
-        PF_SIP_b+bcVSc+other: [[0,2], [1,3], pf_clas]
         PF_b+bcVSc+other: [[0,2], [1,3], pf_clas]
+        PF_b+bc+cVSother: [[0,1,2], [3], pf_clas]
+        PF_SIP_b+bcVSc+other: [[0,2], [1,3], pf_clas]
+        PF_SIP_b+bc+cVSother: [[0,1,2], [3], pf_clas]
         PF_VtxPos: [null, null, pf_regr]
         PAIR_SameVtx: [[0], null, pair_bin]
     primary_labels:
-        #0=b, 1=bb, 4=uds, 5=g
+        ## 0=b, 1=bb, 4=uds, 5=g
         #JET_bVSuds: [[0,1], [4], primary]
         #JET_bVSg: [[0,1], [5], primary]
         JET_bVSudsg: [[0,1], [4,5], primary]
+        #JET_CMSSWPN_bVSuds: [[0,1], [4], primary]
+        #JET_CMSSWPN_bVSg: [[0,1], [5], primary]
+        #JET_CMSSWPN_bVSudsg: [[0,1], [4,5], primary]
+        ## 2 lepb
         #JET_DeepFlavour_bVSuds: [[0,1,2], [4], primary]
         #JET_DeepFlavour_bVSg: [[0,1,2], [5], primary]
         JET_DeepFlavour_bVSudsg: [[0,1,2], [4,5], primary]
-        #JET_CMSSWPN_bVSuds: [[0,1], [4], primary]
-        #JET_CMSSWPN_bVSg: [[0,1], [5], primary]
-        JET_CMSSWPN_bVSudsg: [[0,1], [4,5], primary]
 
 
 # dictionary with the extra features for the ROC curves
 PF_EXTRA_FTS:
-    PF_SIP_b+bcVSc+other: [pf_mask_charged, pf_var_IPsig]
     PF_b+bcVSc+other: [pf_mask_charged]
+    PF_b+bc+cVSother: [pf_mask_charged]
+    PF_SIP_b+bcVSc+other: [pf_mask_charged, pf_var_IPsig]
+    PF_SIP_b+bc+cVSother: [pf_mask_charged, pf_var_IPsig]
     PF_VtxPos: [pf_mask_from_b]
     #PF_VtxPos : [y_score_pf_clas]
     #JET_DeepFlavour_bVSuds: [null, y_deep_score_primary]
@@ -39,10 +44,15 @@ PF_EXTRA_FTS:
     #JET_CMSSWPN_bVSg: [null, y_pn_score_primary]
     JET_CMSSWPN_bVSudsg: [null, y_pn_score_primary]
 
+# dictionary with the weights
+WEIGHTS_DICT:
+    b+bcVSc+other: [0.2, 0.1, 0.03, 0.67]
+    b+bc+cVSother: [0.2, 0.1, 0.03, 0.67]
 
 # dictionary with the axes inf
 AXIS_INF:
     b+bcVSc+other: [0.4, 0.005]
+    b+bc+cVSother: [0.4, 0.005]
     SameVtx:  [0.4, 0.1]
     bVSuds:  [0.5, 0.0001]
     bVSg: [0.5, 0.0001]
