--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux_cb.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux_cb.yaml
@@ -213,22 +213,24 @@ aux_labels:
 
 
 observers:
-   - event_no
-   - jet_no
-   - jet_corr_pt
-   - jet_pt
-   - jet_eta
-   - jet_phi
-   - jet_hadronFlavour
-   - jet_partonFlavour
-   - jet_nBHadrons
-   - jet_nCHadrons
-   - jet_genjet_pt
-   #- jet_matched_genjet_pt
-   #- jet_matched_genjet_eta
-   #- jet_matched_genjet_phi
-   #- jet_matched_genjet_deltaR
-   - npfcands
+   # - event_no
+   # - jet_no
+   # - jet_corr_pt
+   # - jet_pt
+   # - jet_eta
+   # - jet_phi
+   # - jet_hadronFlavour
+   # - jet_partonFlavour
+   # - jet_nBHadrons
+   # - jet_nCHadrons
+   # - jet_genjet_pt
+   # - jet_matched_genjet_pt
+   # - jet_matched_genjet_eta
+   # - jet_matched_genjet_phi
+   # - jet_matched_genjet_deltaR
+   # - npfcands
+   # - jet_qgl
+   # - jet_puId
    - pfDeepFlavourJetTags_probb
    - pfDeepFlavourJetTags_probbb
    - pfDeepFlavourJetTags_problepb
@@ -243,10 +245,8 @@ observers:
    - pfParticleNetAK4JetTags_probg
    - pfParticleNetAK4JetTags_probundef
    - pfParticleNetAK4JetTags_probpu
-   - jet_qgl
-   #- jet_puId
 
-monitor_variables:
+#monitor_variables:
    # - jet_pt
    # - jet_eta
    # - jet_hadronFlavour
