--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot.yaml
@@ -224,41 +224,41 @@ aux_labels:
       pair_threshold: pair_dist_threshold
 
 
-observers:
-   - event_no
-   - jet_no
-   - jet_corr_pt
-   - jet_pt
-   - jet_eta
-   - jet_phi
-   - jet_hadronFlavour
-   - jet_partonFlavour
-   - jet_nBHadrons
-   - jet_nCHadrons
-   - jet_genjet_pt
+#observers:
+   # - event_no
+   # - jet_no
+   # - jet_corr_pt
+   # - jet_pt
+   # - jet_eta
+   # - jet_phi
+   # - jet_hadronFlavour
+   # - jet_partonFlavour
+   # - jet_nBHadrons
+   # - jet_nCHadrons
+   # - jet_genjet_pt
    #- jet_matched_genjet_pt
    #- jet_matched_genjet_eta
    #- jet_matched_genjet_phi
    #- jet_matched_genjet_deltaR
-   - npfcands
-   - pfDeepFlavourJetTags_probb
-   - pfDeepFlavourJetTags_probbb
-   - pfDeepFlavourJetTags_problepb
-   - pfDeepFlavourJetTags_probc
-   - pfDeepFlavourJetTags_probuds
-   - pfDeepFlavourJetTags_probg
-   - pfParticleNetAK4JetTags_probb
-   - pfParticleNetAK4JetTags_probbb
-   - pfParticleNetAK4JetTags_probc
-   - pfParticleNetAK4JetTags_probcc
-   - pfParticleNetAK4JetTags_probuds
-   - pfParticleNetAK4JetTags_probg
-   - pfParticleNetAK4JetTags_probundef
-   - pfParticleNetAK4JetTags_probpu
-   - jet_qgl
+   #- npfcands
+   #- jet_qgl
    #- jet_puId
+   # - pfDeepFlavourJetTags_probb
+   # - pfDeepFlavourJetTags_probbb
+   # - pfDeepFlavourJetTags_problepb
+   # - pfDeepFlavourJetTags_probc
+   # - pfDeepFlavourJetTags_probuds
+   # - pfDeepFlavourJetTags_probg
+   # - pfParticleNetAK4JetTags_probb
+   # - pfParticleNetAK4JetTags_probbb
+   # - pfParticleNetAK4JetTags_probc
+   # - pfParticleNetAK4JetTags_probcc
+   # - pfParticleNetAK4JetTags_probuds
+   # - pfParticleNetAK4JetTags_probg
+   # - pfParticleNetAK4JetTags_probundef
+   # - pfParticleNetAK4JetTags_probpu
 
-monitor_variables:
+#monitor_variables:
    # - jet_pt
    # - jet_eta
    # - jet_hadronFlavour
