--- a/CMSAK4/data/CMSAK4_ParT_ef.yaml
+++ b/CMSAK4/data/CMSAK4_ParT_ef.yaml
@@ -204,7 +204,7 @@ observers:
    - jet_qgl
    - jet_puId
 
-monitor_variables:
+#monitor_variables:
    # - jet_pt
    # - jet_eta
    # - jet_hadronFlavour
