remove deep flavour and pn

--- a/CMSAK4/data/CMSAK4_PNXT_aux_cb_noSV.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_aux_cb_noSV.yaml
@@ -163,20 +163,20 @@ observers:
   # - npfcands
   # - jet_qgl
   # - jet_puId
-  - pfDeepFlavourJetTags_probb
-  - pfDeepFlavourJetTags_probbb
-  - pfDeepFlavourJetTags_problepb
-  - pfDeepFlavourJetTags_probc
-  - pfDeepFlavourJetTags_probuds
-  - pfDeepFlavourJetTags_probg
-  - pfParticleNetAK4JetTags_probb
-  - pfParticleNetAK4JetTags_probbb
-  - pfParticleNetAK4JetTags_probc
-  - pfParticleNetAK4JetTags_probcc
-  - pfParticleNetAK4JetTags_probuds
-  - pfParticleNetAK4JetTags_probg
-  - pfParticleNetAK4JetTags_probundef
-  - pfParticleNetAK4JetTags_probpu
+  # - pfDeepFlavourJetTags_probb
+  # - pfDeepFlavourJetTags_probbb
+  # - pfDeepFlavourJetTags_problepb
+  # - pfDeepFlavourJetTags_probc
+  # - pfDeepFlavourJetTags_probuds
+  # - pfDeepFlavourJetTags_probg
+  # - pfParticleNetAK4JetTags_probb
+  # - pfParticleNetAK4JetTags_probbb
+  # - pfParticleNetAK4JetTags_probc
+  # - pfParticleNetAK4JetTags_probcc
+  # - pfParticleNetAK4JetTags_probuds
+  # - pfParticleNetAK4JetTags_probg
+  # - pfParticleNetAK4JetTags_probundef
+  # - pfParticleNetAK4JetTags_probpu
 
 #monitor_variables:
   # - jet_pt
