--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot.yaml
@@ -224,7 +224,7 @@ aux_labels:
       pair_threshold: pair_dist_threshold
 
 
-#observers:
+observers:
    # - event_no
    # - jet_no
    # - jet_corr_pt
