--- a/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot_vtxdist.yaml
+++ b/CMSAK4/data/CMSAK4_PNXT_ef_aux_tot_vtxdist.yaml
@@ -221,7 +221,7 @@ aux_labels:
       pair_threshold: pair_dist_threshold
 
 
-#observers:
+observers:
   #  - event_no
   #  - jet_no
   #  - jet_corr_pt
@@ -240,20 +240,20 @@ aux_labels:
   #- npfcands
   #- jet_qgl
   #- jet_puId
-  #  - pfDeepFlavourJetTags_probb
-  #  - pfDeepFlavourJetTags_probbb
-  #  - pfDeepFlavourJetTags_problepb
-  #  - pfDeepFlavourJetTags_probc
-  #  - pfDeepFlavourJetTags_probuds
-  #  - pfDeepFlavourJetTags_probg
-  #  - pfParticleNetAK4JetTags_probb
-  #  - pfParticleNetAK4JetTags_probbb
-  #  - pfParticleNetAK4JetTags_probc
-  #  - pfParticleNetAK4JetTags_probcc
-  #  - pfParticleNetAK4JetTags_probuds
-  #  - pfParticleNetAK4JetTags_probg
-  #  - pfParticleNetAK4JetTags_probundef
-  #  - pfParticleNetAK4JetTags_probpu
+   # - pfDeepFlavourJetTags_probb
+   # - pfDeepFlavourJetTags_probbb
+   # - pfDeepFlavourJetTags_problepb
+   # - pfDeepFlavourJetTags_probc
+   # - pfDeepFlavourJetTags_probuds
+   # - pfDeepFlavourJetTags_probg
+   # - pfParticleNetAK4JetTags_probb
+   # - pfParticleNetAK4JetTags_probbb
+   # - pfParticleNetAK4JetTags_probc
+   # - pfParticleNetAK4JetTags_probcc
+   # - pfParticleNetAK4JetTags_probuds
+   # - pfParticleNetAK4JetTags_probg
+   # - pfParticleNetAK4JetTags_probundef
+   # - pfParticleNetAK4JetTags_probpu
 
 #monitor_variables:
    # - jet_pt
