--- a/CMSAK4/data/CMSAK4_ParT.yaml
+++ b/CMSAK4/data/CMSAK4_ParT.yaml
@@ -151,20 +151,20 @@ observers:
    - jet_matched_genjet_phi
    - jet_matched_genjet_deltaR
    - npfcands
-   - pfDeepFlavourJetTags_probb
-   - pfDeepFlavourJetTags_probbb
-   - pfDeepFlavourJetTags_problepb
-   - pfDeepFlavourJetTags_probc
-   - pfDeepFlavourJetTags_probuds
-   - pfDeepFlavourJetTags_probg
-   - pfParticleNetAK4JetTags_probb
-   - pfParticleNetAK4JetTags_probbb
-   - pfParticleNetAK4JetTags_probc
-   - pfParticleNetAK4JetTags_probcc
-   - pfParticleNetAK4JetTags_probuds
-   - pfParticleNetAK4JetTags_probg
-   - pfParticleNetAK4JetTags_probundef
-   - pfParticleNetAK4JetTags_probpu
+   # - pfDeepFlavourJetTags_probb
+   # - pfDeepFlavourJetTags_probbb
+   # - pfDeepFlavourJetTags_problepb
+   # - pfDeepFlavourJetTags_probc
+   # - pfDeepFlavourJetTags_probuds
+   # - pfDeepFlavourJetTags_probg
+   # - pfParticleNetAK4JetTags_probb
+   # - pfParticleNetAK4JetTags_probbb
+   # - pfParticleNetAK4JetTags_probc
+   # - pfParticleNetAK4JetTags_probcc
+   # - pfParticleNetAK4JetTags_probuds
+   # - pfParticleNetAK4JetTags_probg
+   # - pfParticleNetAK4JetTags_probundef
+   # - pfParticleNetAK4JetTags_probpu
    - jet_qgl
    - jet_puId
 
