--- a/performance/roc_config.yaml
+++ b/performance/roc_config.yaml
@@ -11,8 +11,8 @@ ROC_TYPE_DICT:
         #0=b, 1=c, 2=bc, 3=other
         PF_b+bcVSc+other: [[0,2], [1,3], pf_clas]
         PF_b+bc+cVSother: [[0,1,2], [3], pf_clas]
-        PF_SIP_b+bcVSc+other: [[0,2], [1,3], pf_clas]
-        PF_SIP_b+bc+cVSother: [[0,1,2], [3], pf_clas]
+        # PF_SIP_b+bcVSc+other: [[0,2], [1,3], pf_clas]
+        # PF_SIP_b+bc+cVSother: [[0,1,2], [3], pf_clas]
         PF_VtxPos: [null, null, pf_regr]
         PAIR_SameVtx: [[0], null, pair_bin]
     primary_labels:
@@ -20,14 +20,17 @@ ROC_TYPE_DICT:
         #JET_bVSuds: [[0,1], [4], primary]
         #JET_bVSg: [[0,1], [5], primary]
         JET_bVSudsg: [[0,1], [4,5], primary]
-        #JET_CMSSWPN_bVSuds: [[0,1], [4], primary]
-        #JET_CMSSWPN_bVSg: [[0,1], [5], primary]
-        JET_CMSSWPN_bVSudsg: [[0,1], [4,5], primary]
-        ## 2 lepb
-        #JET_DeepFlavour_bVSuds: [[0,1,2], [4], primary]
-        #JET_DeepFlavour_bVSg: [[0,1,2], [5], primary]
-        JET_DeepFlavour_bVSudsg: [[0,1,2], [4,5], primary]
 
+
+CMSSW_ROC_TYPE_DICT:
+    #JET_CMSSWPN_bVSuds: [[0,1], [4], primary]
+    #JET_CMSSWPN_bVSg: [[0,1], [5], primary]
+    JET_CMSSWPN_bVSudsg: [[0,1], [4,5], primary]
+    #JET_CMSSWDeepFlavour_bVSuds: [[0,1], [4], primary]
+    #JET_CMSSWDeepFlavour_bVSg: [[0,1], [5], primary]
+    JET_CMSSWDeepFlavour_bVSudsg: [[0,1], [4,5], primary]
+    PF_SIP_b+bcVSc+other: [[0,2], [1,3], pf_clas]
+    PF_SIP_b+bc+cVSother: [[0,1,2], [3], pf_clas]
 
 # dictionary with the extra features for the ROC curves
 PF_EXTRA_FTS:
@@ -37,11 +40,11 @@ PF_EXTRA_FTS:
     PF_SIP_b+bc+cVSother: [pf_mask_charged, pf_var_IPsig]
     PF_VtxPos: [pf_mask_from_b]
     #PF_VtxPos : [y_score_pf_clas]
-    #JET_DeepFlavour_bVSuds: [null, y_deep_score_primary]
-    #JET_DeepFlavour_bVSg: [null, y_deep_score_primary]
-    JET_DeepFlavour_bVSudsg: [null, y_deep_score_primary]
-    #JET_CMSSWPN_bVSuds: [null, y_pn_score_primary]
-    #JET_CMSSWPN_bVSg: [null, y_pn_score_primary]
+    JET_CMSSWDeepFlavour_bVSuds: [null, y_deep_score_primary]
+    JET_CMSSWDeepFlavour_bVSg: [null, y_deep_score_primary]
+    JET_CMSSWDeepFlavour_bVSudsg: [null, y_deep_score_primary]
+    JET_CMSSWPN_bVSuds: [null, y_pn_score_primary]
+    JET_CMSSWPN_bVSg: [null, y_pn_score_primary]
     JET_CMSSWPN_bVSudsg: [null, y_pn_score_primary]
 
 # dictionary with the weights
