--- a/performance/roc_config.yaml
+++ b/performance/roc_config.yaml
@@ -11,6 +11,7 @@ ROC_TYPE_DICT:
         #0=b, 1=c, 2=bc, 3=other
         PF_b+bcVSc+other: [[0,2], [1,3], pf_clas]
         PF_b+bc+cVSother: [[0,1,2], [3], pf_clas]
+        PF_b+bcVSother: [[0,2], [3], pf_clas]
         # PF_SIP_b+bcVSc+other: [[0,2], [1,3], pf_clas]
         # PF_SIP_b+bc+cVSother: [[0,1,2], [3], pf_clas]
         PF_VtxPos: [null, null, pf_regr]
@@ -31,13 +32,16 @@ CMSSW_ROC_TYPE_DICT:
     JET_CMSSWDeepFlavour_bVSudsg: [[0,1], [4,5], primary]
     PF_SIP_b+bcVSc+other: [[0,2], [1,3], pf_clas]
     PF_SIP_b+bc+cVSother: [[0,1,2], [3], pf_clas]
+    PF_SIP_b+bcVSother: [[0,2], [3], pf_clas]
 
 # dictionary with the extra features for the ROC curves
 PF_EXTRA_FTS:
     PF_b+bcVSc+other: [pf_mask_charged]
     PF_b+bc+cVSother: [pf_mask_charged]
+    PF_b+bcVSother: [pf_mask_charged]
     PF_SIP_b+bcVSc+other: [pf_mask_charged, pf_var_IPsig]
     PF_SIP_b+bc+cVSother: [pf_mask_charged, pf_var_IPsig]
+    PF_SIP_b+bcVSother: [pf_mask_charged, pf_var_IPsig]
     PF_VtxPos: [pf_mask_from_b]
     #PF_VtxPos : [y_score_pf_clas]
     JET_CMSSWDeepFlavour_bVSuds: [null, y_deep_score_primary]
@@ -51,11 +55,13 @@ PF_EXTRA_FTS:
 WEIGHTS_DICT:
     b+bcVSc+other: [0.22, 0.12, 0.03, 0.63]
     b+bc+cVSother: [0.22, 0.12, 0.03, 0.63]
+    b+bcVSother: [0.22, 0.12, 0.03, 0.63]
 
 # dictionary with the axes inf
 AXIS_INF:
     b+bcVSc+other: [0.4, 0.005]
     b+bc+cVSother: [0.4, 0.005]
+    b+bcVSother: [0.4, 0.005]
     SameVtx:  [0.4, 0.1]
     bVSuds:  [0.5, 0.0001]
     bVSg: [0.5, 0.0001]
