modify roc names

--- a/performance/roc_config.yaml
+++ b/performance/roc_config.yaml
@@ -69,10 +69,10 @@ AXIS_INF:
 
 # dictionary with the axes limits
 AXIS_LIMITS:
-    0: [[30, 100],[[0,0.5],[0,3]], vtx_dist_pv, 3]
-    1: [[200, 200],[[-0.06,0.06],[-0.06,0.06]], vtx_x, 0.2]
-    2: [[200, 200],[[-0.06,0.06],[-0.06,0.06]], vtx_y, 0.2]
-    3: [[200, 200],[[-3, 3],[-3,3]], vtx_z, 3]
+    0: [[30, 100],[[0,0.5],[0,3]], VtxDist, 3]
+    1: [[200, 200],[[-0.06,0.06],[-0.06,0.06]], VtxX, 0.2]
+    2: [[200, 200],[[-0.06,0.06],[-0.06,0.06]], VtxY, 0.2]
+    3: [[200, 200],[[-3, 3],[-3,3]], VtxZ, 3]
 
 # dictionary with the special requests
 SPECIAL_DICT:
