change names in history plots

--- a/performance/history_config.yaml
+++ b/performance/history_config.yaml
@@ -1,24 +1,24 @@
 # dictionary with the information to extract from the log files
 
 history_dict:
-    Primary_train_loss: ["AvgLoss: ", ","]
-    Primary_train_acc: ["AvgAcc: ", "\n"]
-    Comb_train_loss: ["AvgCombLoss: ", ","]
-    Aux_train_loss: ["AvgAuxLoss: ", ","]
-    Aux_train_accPF: ["AvgAuxAccPF: ", ","]
-    Aux_train_dist: ["AvgAuxDist: ", ","]
-    Aux_train_accPair: ["AvgAuxAccPair: ", "\n"]
-    Primary_val_metric: ["validation metric: ", " ("]
-    Primary_val_loss: ["validation loss: ", " ("]
-    Comb_val_loss: ["validation combined loss: ", " ("]
-    Aux_val_metricPF: ["validation aux metric PF: ", " ("]
-    Aux_val_dist: ["validation aux distance: ", " ("]
-    Aux_val_metricPair: ["validation aux metric pair: ", " ("]
-    Aux_val_loss: ["validation aux loss: ", " ("]
-    Primary_test_metric: ["test metric: ", " ("]
-    Primary_test_loss: ["test loss: ", " ("]
-    Comb_test_loss: ["test combined loss: ", " ("]
-    Aux_test_metricPF: ["test aux metric PF: ", " ("]
-    Aux_test_dist: ["test aux distance: ", " ("]
-    Aux_test_metricPair: ["test aux metric pair: ", " ("]
-    Aux_test_loss: ["test aux loss: ", " ("]
+    Jet flavour training loss: ["AvgLoss: ", ","]
+    Jet flavour training accuracy: ["AvgAcc: ", "\n"]
+    Combined training loss: ["AvgCombLoss: ", ","]
+    Auxiliary training loss: ["AvgAuxLoss: ", ","]
+    Origin training accuracy: ["AvgAuxAccPF: ", ","]
+    VtxPos training MSE: ["AvgAuxDist: ", ","]
+    SameVtx training accuracy: ["AvgAuxAccPair: ", "\n"]
+    Jet flavour validation accuracy: ["validation metric: ", " ("]
+    Jet flavour validation loss: ["validation loss: ", " ("]
+    Combined validation loss: ["validation combined loss: ", " ("]
+    Origin validation accuracy: ["validation aux metric PF: ", " ("]
+    VtxPos validation MSE: ["validation aux distance: ", " ("]
+    SameVtx validation accuracy: ["validation aux metric pair: ", " ("]
+    Auxiliary validation loss: ["validation aux loss: ", " ("]
+    # Jet flavour test accuracy: ["test metric: ", " ("]
+    # Jet flavour test loss: ["test loss: ", " ("]
+    # Combined test loss: ["test combined loss: ", " ("]
+    # Origin test accuracy: ["test aux metric PF: ", " ("]
+    # VtxPos test MSE: ["test aux distance: ", " ("]
+    # SameVtx test accuracy: ["test aux metric pair: ", " ("]
+    # Auxiliary test loss: ["test aux loss: ", " ("]
