Restrict to uproot<5.2.0.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ matplotlib>=3.3.0
 tqdm>=4.41.0
 PyYAML>=5.4
 awkward0>=0.15.5
-uproot>=4.2.0
+uproot>=4.2.0,<5.2.0
 awkward>=1.8.0
 vector>=0.9.0
 lz4>=3.1.0
